Implements draft-ietf-oauth-discovery (iss #166)

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -883,3 +883,8 @@ version 5.57 (2018-03-22)
     * Adds new URIUtils.stripQueryString method.
     * Fixes AuthorizationRequest and AuthenticationRequest serialisation of
       query parameters in the authorisation endpoint URI (iss #237).
+
+version 5.58 (2018-04-20)
+    * Adds new AuthorizationServerMetadata class for representing OAuth 2.0
+      Authorisation Server (AS) metadata, see draft-ietf-oauth-discovery-10
+      (iss #166).
