--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -896,3 +896,7 @@ version 5.59 (2018-04-22)
 version 5.60 (2018-04-22)
     * Refactors ACRRequest.resolve to accept plain OAuth 2.0 authorisation
       requests.
+
+version 5.61 (2018-04-24)
+    * Updates the ClaimsRequest.resolve methods to support plain OAuth 2.0
+      authorisation requests.
