--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -912,7 +912,7 @@ version 5.62 (2018-05-14)
       setter, deprecates the old ones (iss #244).
     * Allows OpenID Connect token responses without an ID token, which may
       occur in token responses to a refresh token grant where the OpenID
-      Provider may not issue an ID token(iss #243).
+      Provider may not issue an ID token (iss #243).
 
 version 5.63 (2018-07-05)
     * Fixes missing default setting of token_endpoint_auth_methods_supported to
@@ -922,3 +922,8 @@ version 5.63 (2018-07-05)
 
 version 5.64 (2018-07-13)
     * Adds Java 6, 7, 8 and 10 build profiles (iss #247).
+
+version 5.64.1 (2018-07-16)
+    * Previous release signed with expired GPG key, repeat release with new
+      GPG key.
+
