--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -932,3 +932,8 @@ version 5.64.2 (2018-07-18)
 
 version 5.64.3 (2018-08-07)
     * Updates javax Mail API dependency to 1.6.1 (iss #251).
+
+version 5.64.4 (2018-08-20)
+    * Removes redundant javax.mail:javax.mail-api:1.6.1 dependency, API
+      definition is included in the com.sun.mail:javax.mail implementation (iss
+      #253).
