Adds experimental support for draft-ietf-oauth-incremental-authz-00 (iss #249)

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -939,9 +939,11 @@ version 5.64.4 (2018-08-20)
       #253).
     * Fixes jdk6, jdk8 and jdk10 releases (iss #250).
 
-version 6.0 (2018-09-01)
+version 6.0 (2018-09-02)
     * Adds experimental support for Resource Indicators for OAuth 2.0
       (draft-ietf-oauth-resource-indicators-00).
+    * Adds experimental support for OAuth 2.0 Incremental Authorization
+      (draft-ietf-oauth-incremental-authz-00).
     * Updates AuthorizationRequest and AuthenticationRequest to support
       multi-valued query parameters (breaking change).
     * Updates the AuthorizationResponse classes to support multi-valued
