--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -990,3 +990,8 @@ version 6.0 (2018-09-02)
 
 version 6.0.1 (2018-09-04)
     * Optimises ServletUtils.createHTTPRequest.
+
+version 6.1 (2018-10-22)
+    * Adds TokenIntrospectionResponse.toSuccessResponse and toErrorResponse
+      helper methods.
+
