--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -994,4 +994,5 @@ version 6.0.1 (2018-09-04)
 version 6.1 (2018-10-22)
     * Adds TokenIntrospectionResponse.toSuccessResponse and toErrorResponse
       helper methods.
+    * Updates tests for Nimbus JOSE+JWT 6.1.
 
