--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1000,3 +1000,8 @@ version 6.1.1 (2018-10-29)
     * Fixes HTTPRequest.send to properly handle multi-valued headers introduced
       in 6.0 (iss #252).
 
+version 6.2 (2018-11-12)
+    * Adds new static AuthenticationResponseParser.parse(HTTPRequest) method
+      for parsing OpenID Connect authentication responses from the a HTTP
+      request received at the client redirection (callback) URI. Applies to the
+      query, fragment and form_post response modes.
