--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1000,3 +1000,6 @@ version 6.1.1 (2018-10-29)
     * Fixes HTTPRequest.send to properly handle multi-valued headers introduced
       in 6.0 (iss #252).
 
+version 6.2 (2018-11-14)
+    * Adds X509CertificateUtils.publicKeyMatches(X509Certificate,PublicKey)
+      method.
