--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1045,3 +1045,7 @@ version 6.4 (2018-12-15)
 version 6.5 (2018-12-15)
     * Updates the JSONObjectUtils.getXXX with default value to return the
       default value also when a key is found, but its value is null.
+
+version 6.6 (2019-03-19)
+    * Adds new com.nimbusds.oauth2.sdk.device package implementing the OAuth
+      2.0 Device Authorization Grant (draft-ietf-oauth-device-flow-15).
