--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1052,3 +1052,7 @@ version 6.6 (2019-03-19)
 
 version 6.6.1 (2019-03-26)
     * Method naming convention fixes in DeviceAuthorizationSuccessResponse.
+
+version 6.7 (2019-03-12)
+    * Adds new static IDTokenClaimsSet.parse(net.minidev.json.JSONObject)
+      method.
