--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1056,3 +1056,6 @@ version 6.6.1 (2019-03-26)
 version 6.7 (2019-03-12)
     * Adds new static IDTokenClaimsSet.parse(net.minidev.json.JSONObject)
       method.
+
+version 6.8 (2019-03-13)
+    * Adds new Tokens.toOIDCTokens() method.
