--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1114,3 +1114,5 @@ version 6.14 (2019-07-18)
 version 6.15 (2019-07-19)
     * Adds "phr" and "phrh" ACR constants from OpenID Connect Extended
       Authentication Profile (EAP) ACR Values 1.0 - draft 00.
+    * Adds new static AuthorizationServerMetadata.resolveURL method.
+    * Adds new static OIDCProviderMetadata.resolveURL method.
