--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1111,8 +1111,11 @@ version 6.14 (2019-07-18)
       is used, the request will have a certificate, but its root DN will be
       null (or at least not equal to the subject DN).
 
-version 6.15 (2019-07-19)
+version 6.15 (2019-10-09)
     * Adds "phr" and "phrh" ACR constants from OpenID Connect Extended
       Authentication Profile (EAP) ACR Values 1.0 - draft 00.
     * Adds new static AuthorizationServerMetadata.resolveURL method.
     * Adds new static OIDCProviderMetadata.resolveURL method.
+    * Makes the OpenID Connect "prompt" parameter available to plain OAuth 2.0
+      requests by pulling it up from AuthenticationRequest to
+      AuthorizationRequest.
