Simplifies ClientAuthentication.parse for self_signed_tls_client_auth (iss #272)

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1120,4 +1120,7 @@ version 6.15 (2019-10-10)
       requests by pulling it up from AuthenticationRequest to
       AuthorizationRequest.
     * Updates ClaimsRequest to support additional information for a claim.
+    * Simplifies ClientAuthentication.parse for self_signed_tls_client_auth to
+      not require the issuer DN and subject DN HTTP request metadata / TLS
+      headers to be set (iss #272).
     * Bumps Nimbus JOSE+JWT to min 7.9.
