--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1127,3 +1127,8 @@ version 6.15 (2019-10-10)
 
 version 6.16 (2019-10-10)
     * Pulls client X509Certificate field up to TLSClientAuthentication.
+
+version 6.16.1 (2019-10-11)
+    * Reverts behaviour of ClaimsRequest.resolve with custom claims map to
+      6.14, custom scope value to claim names expansions always resolved as
+      voluntary claims with no additional information (iss #273).
