--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1132,3 +1132,10 @@ version 6.16.1 (2019-10-11)
     * Reverts behaviour of ClaimsRequest.resolve with custom claims map to
       6.14, custom scope value to claim names expansions always resolved as
       voluntary claims with no additional information (iss #273).
+
+version 6.16.1 (2019-10-12)
+    * Fixes ClientAuthentication.parse(HTTPRequest) to return no client
+      authentication if a client X.509 certificate is present but no client_id
+      parameter. Intended to fix TokenIntrospectionRequest.parse(HTTPRequest)
+      with mTLS bearer token as authorisation. Bug introduced in 6.14 (issue
+      #274).
