--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1149,3 +1149,8 @@ version 6.16.3 (2019-10-21)
 
 version 6.16.4 (2019-10-21)
     * ClientInformationResponse.toHTTPResponse must return HTTP 201 (iss #277).
+
+version 6.16.5 (2019-10-24)
+    * Fixes BearerAccessToken.parse(String) to not throw ParseException
+      instances with messages which include illegal characters according to RFC
+      6750, section 3 (iss #276).
