--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1158,8 +1158,9 @@ version 6.16.5 (2019-10-24)
 version 6.17 (2019-10-25)
     * Adds support for OAuth 2.0 Pushed Authorization Requests
       (draft-lodderstedt-oauth-par-00), see PushedAuthorizationRequest,
-      PushedAuthorizationResponse, PushedAuthorizationSuccessResponse and
-      PushedAuthorizationSuccessResponse classes.
+      PushedAuthorizationResponse, PushedAuthorizationSuccessResponse,
+      PushedAuthorizationSuccessResponse and
+      AuthorizationServerEndpointMetadata classes.
     * Deprecates RequestObjectPOST classes.
     * Updates ErrorObject to support URL-encoded parameters.
     * Adds new AuthenticationRequestDetector utility.
