--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1168,3 +1168,11 @@ version 6.17 (2019-10-25)
 version 6.17.1 (2019-10-27)
     * Updates PushedAuthorizationResponse.parse to treat HTTP status code 200
       as success (in addition to HTTP 201 Created) (iss #279).
+
+version 6.18 (2019-11-02)
+    * Updates OIDCProviderMetadata to support OpenID Connect for Identity
+      Assurance 1.0 - 08.
+    * Adds new DateWithTimeZoneOffset utility class with support for ISO 8601
+      formatting and parsing.
+    * Adds new SimpleDate utility class with support for ISO 8601 formatting
+      and parsing.
