--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1175,3 +1175,9 @@ version 6.18 (2019-11-03)
 
 version 6.18.1 (2019-11-18)
     * Allow scope=null in access token response (iss #281).
+
+version 6.18.1 (2019-11-29)
+    * Adds new parameter to the ClientInformationResponse constructor to
+      indicate if the response is for a new client (HTTP status 201) or for a
+      retrieved or updated client (HTTP status 200).
+
