--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1204,3 +1204,7 @@ version 6.20 (2019-12-04)
 version 6.21 (2019-12-06)
     * Adds support for the OpenID Connect Identity Assurance 1.0 "purpose"
       parameter in AuthenticationRequest.
+
+version 6.21.1 (2019-12-17)
+    * Fixes PushedAuthorizationErrorResponse.parse to set the HTTP status code
+      in the ErrorObject.
