--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1219,3 +1219,7 @@ version 6.21.2 (2019-12-17)
 
 version 6.22 (2020-01-03)
     * Adds MapUtils.isEmpty utility method.
+
+version 6.23 (2020-01-10)
+    * Refactors ClaimsRequest.Entry for fluent builder pattern, adds support
+      for "purpose" parameter from OpenID Connect eKYC / IdA.
