--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1220,6 +1220,7 @@ version 6.21.2 (2019-12-17)
 version 6.22 (2020-01-03)
     * Adds MapUtils.isEmpty utility method.
 
-version 6.23 (2020-01-10)
+version 6.23 (2020-01-11)
+    * ClaimsRequest supports OpenID Connect eKYC / IdA.
     * Refactors ClaimsRequest.Entry for fluent builder pattern, adds support
       for "purpose" parameter from OpenID Connect eKYC / IdA.
